[package]
name = "typst-assets"
description = "Assets for the Typst compiler."
categories = ["compilers", "science"]
keywords = ["markup", "typesetting", "typst"]
version = "0.10.0"
authors = ["The Typst Project Developers"]
edition = "2021"
homepage = "https://typst.app"
repository = "https://github.com/typst/typst-assets"
license = "Apache-2.0"
